<resources>
    <string name="app_name">CodeBoom Vendor App</string>
    <string name="product_name">Product Name</string>
    <string name="product_category">Product category</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="product_selling_price">Product Selling Price</string>
    <string name="category_name">Category name</string>
    <string name="choose_cover_image">Choose Cover Image</string>
    <string name="choose_products_image">Choose Products Image</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="uploading">Uploading...</string>
    <string name="ordered_at">Ordered At</string>
    <string name="_11_08_2022">11/08/2022</string>
    <string name="order_status">Order Status</string>
    <string name="update_status">Update Status</string>

    <string-array name="order_status">
        <item>Ordered</item>
        <item>Dispatched</item>
        <item>Delivered</item>
    </string-array>
</resources>